[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/Adventurer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Adventurer Sprite Sheet v1.1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Events.gd" type="Script" id=3]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.10632, 2.95196 )

[sub_resource type="CapsuleShape2D" id=2]
height = 1.01216

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.73827, 10 )

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 26, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SwordHit/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 52, 61 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 91, 97 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 78, 81 ]
}

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 12 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 13, 20 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/attack1/node = SubResource( 10 )
states/attack1/position = Vector2( -112, 93 )
states/attack2/node = SubResource( 11 )
states/attack2/position = Vector2( 107, -132 )
states/die/node = SubResource( 12 )
states/die/position = Vector2( 314, 93 )
states/hurt/node = SubResource( 13 )
states/hurt/position = Vector2( 257, -229 )
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 107, 93 )
states/run/node = SubResource( 15 )
states/run/position = Vector2( -112, -132 )
transitions = [ "idle", "attack1", SubResource( 16 ), "idle", "run", SubResource( 17 ), "run", "idle", SubResource( 18 ), "idle", "die", SubResource( 19 ), "idle", "hurt", SubResource( 20 ), "hurt", "idle", SubResource( 21 ), "idle", "attack2", SubResource( 22 ), "attack1", "idle", SubResource( 23 ), "run", "attack1", SubResource( 24 ), "run", "attack2", SubResource( 25 ), "attack2", "idle", SubResource( 26 ), "run", "hurt", SubResource( 27 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -480, -316.031 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[node name="Adventurer" type="KinematicBody2D"]
use_parent_material = true
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 1 )
scale = Vector2( 0.985983, 1 )
texture = ExtResource( 2 )
vframes = 16
hframes = 13
frame = 2

[node name="SwordHit" type="Area2D" parent="Sprite"]
editor/display_folded = true
position = Vector2( -1.01422, -1 )
scale = Vector2( 1.01422, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite/SwordHit"]
position = Vector2( 12.3297, 3.12844 )
shape = SubResource( 1 )
disabled = true

[node name="Events" type="Area2D" parent="Sprite"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Events"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.1, 6.7 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 4 )
anims/attack2 = SubResource( 5 )
anims/die = SubResource( 6 )
anims/hurt = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/run = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -13.6225
margin_top = -7.83292
margin_right = -13.6225
margin_bottom = -7.83292
[connection signal="area_entered" from="Sprite/SwordHit" to="." method="_on_SwordHit_area_entered"]
[connection signal="area_entered" from="Sprite/Events" to="." method="_on_Events_area_entered"]
